# ot-harjoitustyo2024

./: .gitignore  .pylintrc  README.md  da  gitlog.txt  komentorivi.txt  pyproject.toml  tasks.py  tyoanaikaa.md  vaatimusmaarittely.md
Dokumentaatio/: arkkitehtuuri.md  changelog.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: README.md
laskarit/viikko1/: README.md  gitlog.txt  komentorivi.txt
laskarit/viikko1/laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: maksukortti.py  pyproject.toml
laskarit/viikko2/maksukortti/src/: kassapaate.py  maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  .coveragerc  pyproject.toml
laskarit/viikko2/unicafe/src/: index.py  kassapaate.py  maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: main.py  pyproject.toml
src/Sudoku/: board_generator.py  board_generator2.py  game.py  ui.py  ui2.py  user_interface.py
src/test_if_generated_correctly/: board_test.py
src/test_if_puzzle_can_be_solved/: puzzle_test.py  puzzle_test.py.py
src/test_if_puzzle_generated_correctly/: board_test.py
src/test_if_puzzle_solvable/: board_test.py
src/test_if_user_interface_works/: test_UserInterface.py
src/tests/: board_test.py
tiedostoja/: file1  file2  file3
